--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,7 +31,7 @@
     bottom: -30%;
     width: 300px;
     height: 540px;
-    background-color: blue;
+    background-color: black;
     border-radius: 21px;
     transform: rotate(30deg);
   }
