--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,8 +17,9 @@
     font-family: 'Plus Jakarta Sans';
   }
   .site-header a:hover {
-    color: #fff;
+    color: hotpink;
     text-decoration: none;
+    font-size: larger;
   }
   
   /*
